{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 14,
  "lineage": "35db55a2-0daf-aab0-4a2d-0b62c4ff0bc2",
  "resources": [
    {
      "module": "module.gcp-network.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gcp-network.module.firewall_rules",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules_ingress_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gcp-network.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gcp-network.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/kent-us-c1-private-master-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-05T06:41:23.901-08:00",
            "gateway_address": "10.60.0.1",
            "id": "projects/cloud-sunmo-io/regions/us-central1/subnetworks/kent-us-c1-private-master-subnet",
            "ip_cidr_range": "10.60.0.0/17",
            "name": "kent-us-c1-private-master-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/cloud-sunmo-io/global/networks/kent-us-c1-private-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cloud-sunmo-io",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-sunmo-io/regions/us-central1/subnetworks/kent-us-c1-private-master-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.gcp-network.module.vpc.google_compute_network.network"
          ]
        },
        {
          "index_key": "us-central1/kent-us-c1-private-subnet",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-12-05T06:41:23.089-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/cloud-sunmo-io/regions/us-central1/subnetworks/kent-us-c1-private-subnet",
            "ip_cidr_range": "10.0.0.0/17",
            "name": "kent-us-c1-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/cloud-sunmo-io/global/networks/kent-us-c1-private-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cloud-sunmo-io",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.0.0/18",
                "range_name": "ip-range-pods-kent-us-c1-private"
              },
              {
                "ip_cidr_range": "192.168.64.0/18",
                "range_name": "ip-range-svc-kent-us-c1-private"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-sunmo-io/regions/us-central1/subnetworks/kent-us-c1-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.gcp-network.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gcp-network.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cloud-sunmo-io/global/networks/kent-us-c1-private-network",
            "mtu": 0,
            "name": "kent-us-c1-private-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5397670864986310035",
            "project": "cloud-sunmo-io",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-sunmo-io/global/networks/kent-us-c1-private-network"
          }
        }
      ]
    },
    {
      "module": "module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_inkubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_allow_pods",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "shadow_deny_exkubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": []
    }
  ]
}